--- a/ow01.html
+++ b/ow01.html
@@ -26,7 +26,12 @@
         <ul class="sub-nav">
           <li><a href="poem01.html">遇见花开</a></li>
           <li><a href="poem02.html">人生如梦</a></li>
-          <li><a href="poem51.html">还记得</a></li>
+          <li><a href="poem31.html">埋葬柔情</a></li>
+          <li><a href="poem4.html">不诉离殇</a></li>
+          <li><a href="poem5.html">孤单成瘾</a></li>
+          <li><a href="poem61.html">一一〇七</a></li>
+          <li><a href="poem62.html">泪的告白</a></li>
+          <li><a href="poem63.html">在你身后</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
@@ -77,7 +82,7 @@
  
       <div class="news_con">
 		<!--content start-->
-	<center>
+		<center>
         <br>
         <img alt="" src="images/game/ow01.png"><br>
 		<br>
@@ -108,7 +113,18 @@
     <div class="cloud">
       <h2 class="hometitle">标签云</h2>
       <ul>
-        <a href="poem01.html">遇见花开</a> <a href="poem02.html">人生如梦</a> <a href="poem51.html">还记得</a>
+        <a >源氏</a> 
+        <a >法鸡</a> 
+        <a >天使</a> 
+        <a >半藏</a> 
+        <a >士兵76</a> 
+        <a >黑百合</a> 
+        <a >D.Va</a> 
+        <a >麦克雷</a> 
+        <a >狂鼠</a> 
+        <a >莱因哈特</a> 
+        <a >温斯顿</a> 
+        <a >查莉娅</a> 
       </ul>
     </div>
     <div class="guanzhu" id="float">
@@ -124,7 +140,7 @@
   </div>
 </article>
 <footer>
-  <p>Design by <a href="https://gaodongxu.github.io/">高东旭</a></p>
+  <p>By <a href="https://gaodongxu.github.io/">高东旭</a></p>
 </footer>
 <a href="#" class="cd-top">Top</a>
 </body>
