--- a/poem31.html
+++ b/poem31.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>遇见花开</title>
+<title>埋葬柔情</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -66,93 +66,67 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 遇见花开</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 埋葬柔情</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">遇见花开</h3>
-      <div class="bloginfo">
+      <h3 class="news_title" style="text-align:center;">埋葬柔情</h3>
+      <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">死神の眼泪</li>
+          <li class="lmname">罪孽</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_about" style="text-align:center;"><strong>原题：</strong>遇见花开遇见你，不知是否在心底</div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
         <br>
-        黑暗的楼廊
+		<br>你决绝的脚步
+		<br>是我心的桎梏
+		<br>西山的日暮
+		<br>将之带向末路
+        <br>
+		<br>鬼魅的身影
+		<br>深夜里看清
+		<br>不论输与赢
+		<br>都是罪孽的恶行
+        <br>
+		<br>亲手将你的柔情
+		<br>葬进自私的坟茔
+		<br>枕边安厝的魂灵
+		<br>在逃避下一个黎明
+        <br>
+		<br>梦里相思的心弦
+		<br>消逝了你的容颜
+		<br>这未完的缠绵
+		<br>我该怎么粘连
+        <br>
+		<br>是岁月
+		<br>让伤口结了痂
+		<br>是红尘
+		<br>让心头留了疤
 		<br>
-		我独自凝望
+		<br>指间滑过的你的长发
+		<br>就像漏掉的沙
+		<br>连同时光袭卷的怀念与牵挂
+		<br>零落天涯
 		<br>
-		没有脚步的声响
-		<br>
-		气氛是如此的安详
-		<br>
-		<br>
-		一步步的寻迹
-		<br>
-		一点点的遗忘
-		<br>
-		忘记了梦想
-		<br>
-		和你的模样
-		<br>
-		<br>
-		拾级而上
-		<br>
-		踱步在这黑暗的楼廊
-		<br>
-		夜晚的颜色
-		<br>
-		也会如此的芬芳
-		<br>
-		<br>
-		转身，回望
-		<br>
-		遗忘的台阶上
-		<br>
-		尽是你笑的模样
-		<br>
-		<br>
-		路漫漫
-		<br>
-		怎可驻足眼前
-		<br>
-		回望的瞬间
-		<br>
-		是否心中万般的依恋
-		<br>
-		<br>
-		月虽明
-		<br>
-		却伤尽繁星点点
-		<br>
-		醉眼空前
-		<br>
-		安厝以待千年
-		<br>
-		<br>
-		轮回再转
-		<br>
-		下一世
-		<br>
-		梦的眼前 
-		<br>
-		<br>
+		<br>以一颗心做抵押
+		<br>换得一朵镜中花
+		<br>我宁愿披盔戴甲，金戈战马
+		<br>一切只为忘记她
+        <br><br>
 		<center>
-        <img alt="" src="images/poem/01.jpg"><br>
+        <img alt="" src="images/poem/31.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>下一篇：<a href="poem41.html" title="秋殇">秋殇</a></p>
       <p> </p>
       <p> </p>
     </div>
@@ -178,6 +152,7 @@
       <h2 class="hometitle">关注我 么么哒！</h2>
       <ul>
         <li class="sina"><span>新浪微博</span>我的微博</a></li>
+        <!-- li class="tencent"><span>腾讯微博</span>杨青博客</a></li -->
         <li class="qq"><span>QQ号</span>1306494066</a></li>
         <li class="email"><span>邮箱帐号</span>1306494066@qq.com</a></li>
         <li class="wxgzh"><span>微信号</span>1306494066</a></li>
@@ -187,7 +162,7 @@
   </div>
 </article>
 <footer>
-  <p>By <a href="https://gaodongxu.github.io/">高东旭</a></p>
+  <p>Design by <a href="https://gaodongxu.github.io/">高东旭</a></p>
 </footer>
 <a href="#" class="cd-top">Top</a>
 </body>
