--- a/poem4.html
+++ b/poem4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>沉默寡言高东旭</title>
+<title>不诉离殇</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -59,78 +59,19 @@
           <li><a href="">绝地求生（待开发）</a></li>
         </ul>
       </li>
-      <li><a href="https://blog.csdn.net/qq_29591261" target="_blank">CSDN博客</a> </li>
+      <li><a href="https://blog.csdn.net/qq_29591261" >CSDN博客</a> </li>
       <li><a href="about.html">关于我</a> </li>
     </nav>
   </div>
   <!--menu end--> 
 </header>
-<article> 
-  <!--banner begin-->
- <div class="picsbox"> 
-  <div class="banner">
-    <div id="ban" class="fader">
-	
-      <li class="slide" ><a href="poem51.html"><img src="images/poem/51.jpg"><span class="imginfo">还记得</span></a></li>
-      <li class="slide" ><a href="poem54.html"><img src="images/poem/54.jpg"><span class="imginfo">静夜思</span></a></li>
-      <li class="slide" ><a href="poem44.html"><img src="images/poem/44.jpg"><span class="imginfo">每一句都是谎言</a></li>
-      <div class="fader_controls">
-        <div class="page prev" data-target="prev">&lsaquo;</div>
-        <div class="page next" data-target="next">&rsaquo;</div>
-        <ul class="pager_list">
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!--banner end-->
-  <div class="toppic">
-    <li> <a href="poem01.html"> <i><img src="images/poem/01.jpg"></i>
-      <h2>遇见花开遇见你，不知是否在心底</h2>
-      <span>遇见花开</span> </a> </li>
-    <li> <a href="poem02.html"> <i><img src="images/poem/02.jpg"></i>
-      <h2>年华似水终会褪去，人生如梦终会醒来</h2>
-      <span>人生如梦</span> </a> </li>
-  </div>
-  </div>
-  <div class="blank"></div>
+<div class="pagebg sh"></div>
+<div class="container">
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 不诉离殇</span><a href="" class="n1">网站首页</a><a href="" class="n2">不诉离殇</a></h1>
   <!--blogsbox begin-->
   <div class="blogsbox">
-	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="poem31.html" >埋葬柔情</a></h3>
-      <span class="blogpic"><a href="poem31.html" title=""><img src="images/poem/31.jpg" alt=""></a></span>
-      <p class="blogtext">你决绝的脚步
-		<br>是我心的桎梏
-		<br>西山的日暮
-		<br>将之带向末路
-        <br></p>
-      <div class="bloginfo">
-        <ul>
-          <li class="author">文青</li>
-          <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
-          <li class="view">99已阅读</li>
-          <li class="like">99</li>
-        </ul>
-      </div>
-    </div>
+  
     <div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="code01.html">TextRank算法抽取关键词</a></h3>
-      <p class="blogtext">由于TextRank是由大名鼎鼎的Google的PageRank算法转化而来，所以这里先介绍一下PageRank算法。<br>
-		PageRank最开始用来计算网页的重要性。在衡量一个网页的排名时，直觉告诉我们： <br>
-		（1）一个网页被更多网页链接时，就应该越重要，其排名就应该越靠前。 <br>
-		（2）排名高的网页应具有更大的表决权，即当一个网页被排名高的网页所链接时，其重要性也应该提高。</p>
-      <div class="bloginfo">
-        <ul>
-          <li class="author">Godxv</li>
-          <li class="lmname">算法</li>
-          <li class="timer">2000-00-00 00:00:00</li>
-          <li class="view">99已阅读</li>
-          <li class="like">99</li>
-        </ul>
-      </div>
-    </div>
-	
-	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
       <h3 class="blogtitle"><a href="poem41.html" >秋殇</a></h3>
       <span class="blogpic"><a href="poem41.html" title=""><img src="images/poem/41.jpg" alt=""></a></span>
       <p class="blogtext">翻尽书尘也读不懂世事的伪装
@@ -140,38 +81,6 @@
         <ul>
           <li class="author">文青</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
-          <li class="view">99已阅读</li>
-          <li class="like">99</li>
-        </ul>
-      </div>
-    </div>
-	
-    <div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="code02.html">Servlet+Tomcat搭建Http服务</a></h3>
-      <p class="blogtext">下载Tomcat<br>
-		Tomcat官网下载：http://tomcat.apache.org/<br>
-		要确保Tomcat与JDK版本对应，此文中采用的是Tomcatv8.0和JDK1.7...</p>
-      <div class="bloginfo">
-        <ul>
-          <li class="author">Godxv</li>
-          <li class="lmname">Java</li>
-          <li class="timer">2000-00-00 00:00:00</li>
-          <li class="view">99已阅读</li>
-          <li class="like">99</li>
-        </ul>
-      </div>
-    </div>
-	
-	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="ow01.html">守望先锋</a></h3>
-      <span class="blogpic"><a href="ow01.html" title=""><img src="images/game/ow01.png" alt=""></a></span>
-      <p class="blogtext"><br><br>
-	  </p>
-      <div class="bloginfo">
-        <ul>
-          <li class="author">十乂</li>
-          <li class="lmname">源氏</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -203,6 +112,24 @@
 		清澈如你明眸<br>
 		谁家的女儿不知羞<br>
 		一双玉足浣水流<br></p>
+      <div class="bloginfo">
+        <ul>
+          <li class="author">文青</li>
+          <li class="lmname">不诉离殇</li>
+          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="view">99已阅读</li>
+          <li class="like">99</li>
+        </ul>
+      </div>
+    </div>
+	
+	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
+      <h3 class="blogtitle"><a href="poem44.html" >每一句都是谎言</a></h3>
+      <span class="blogpic"><a href="poem44.html" title=""><img src="images/poem/44.jpg" alt=""></a></span>
+      <p class="blogtext">在夏天看雪<br>
+		在冬天听雷<br>
+		在雨里哭泣<br>
+		在梦里失眠<br></p>
       <div class="bloginfo">
         <ul>
           <li class="author">文青</li>
@@ -250,16 +177,52 @@
     </div>
 	
 	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="poem52.html" >能够遗忘，才不悲伤</a></h3>
-      <span class="blogpic"><a href="poem52.html" title=""><img src="images/poem/52.jpg" alt=""></a></span>
-      <p class="blogtext">云朵四处游荡<br>
-		月亮大放光芒<br>
-		人山人海中<br>
-		我一个人嚣张<br></p>
+      <h3 class="blogtitle"><a href="poem47.html" >那时红颜</a></h3>
+      <span class="blogpic"><a href="poem47.html" title=""><img src="images/poem/47.jpg" alt=""></a></span>
+      <p class="blogtext">你眉目依旧 却不再温柔<br>
+		爱装进沙漏 时光悠悠 感觉已远走<br>
+		要怎么开口 说什么挽留<br>
+		用一生守候 百个春秋 等一瞬回头<br></p>
       <div class="bloginfo">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">孤单成瘾</li>
+          <li class="lmname">不诉离殇</li>
+          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="view">99已阅读</li>
+          <li class="like">99</li>
+        </ul>
+      </div>
+    </div>
+	
+	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
+      <h3 class="blogtitle"><a href="poem48.html" >如同</a></h3>
+      <span class="blogpic"><a href="poem48.html" title=""><img src="images/poem/48.jpg" alt=""></a></span>
+      <p class="blogtext">遇见你如同遇见一场马拉松<br>
+		加速的心拥有了魔鬼的冲动<br>
+		恋上你如同恋上一朵罂粟花<br>
+		让我在缭绕的花香中苦苦挣扎<br></p>
+      <div class="bloginfo">
+        <ul>
+          <li class="author">文青</li>
+          <li class="lmname">不诉离殇</li>
+          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="view">99已阅读</li>
+          <li class="like">99</li>
+        </ul>
+      </div>
+    </div>
+	
+	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
+      <h3 class="blogtitle"><a href="poem49.html" >太阳坠落</a></h3>
+      <span class="blogpic"><a href="poem49.html" title=""><img src="images/poem/49.jpg" alt=""></a></span>
+      <p class="blogtext">如果太阳流星般坠落<br>
+		我的世界会变成什么<br>
+		黑夜与孤独包围着我<br>
+		还有数不完的星星和寂寞<br></p>
+      <div class="bloginfo">
+        <ul>
+          <li class="author">文青</li>
+          <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -270,6 +233,20 @@
   </div>
   <!--blogsbox end-->
   <div class="sidebar">
+    <div class="zhuanti">
+      <h2 class="hometitle">特别推荐</h2>
+      <ul>
+        <li> <i><img src="images/poem/44.jpg"></i>
+          <p>每一句都是谎言 <span><a href="poem44.html">阅读</a></span> </p>
+        </li>
+        <li> <i><img src="images/poem/42.jpg"></i>
+          <p>鱼水情<span><a href="poem42.html">阅读</a></span></p>
+        </li>
+        <li> <i><img src="images/poem/43.jpg"></i>
+          <p>捉迷藏<span><a href="poem43.html">阅读</a></span></p>
+        </li>
+      </ul>
+    </div>
     <div class="cloud">
       <h2 class="hometitle">标签云</h2>
       <ul>
@@ -284,14 +261,9 @@
 		<a href="poem5.html">孤单成瘾</a>
 		<a href="poem42.html">鱼水情</a>
 		<a href="poem43.html">捉迷藏</a>
-	  </ul>
-    </div>
-    <div class="links">
-      <h2 class="hometitle">友情链接</h2>
-      <ul>
-        <li><a href="https://blog.csdn.net/qq_29591261" target="_blank">CSDN博客</a></li>
       </ul>
     </div>
+    
     <div class="guanzhu" id="float">
       <h2 class="hometitle">关注我 么么哒！</h2>
       <ul>
@@ -303,7 +275,10 @@
       </ul>
     </div>
   </div>
-</article>
+</div>
+<footer>
+  <p>By <a href="https://gaodongxu.github.io/">高东旭</a></p>
+</footer>
 <a href="#" class="cd-top">Top</a>
 </body>
 </html>
