--- a/poem42.html
+++ b/poem42.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>遇见花开</title>
+<title>鱼水情</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -66,93 +66,132 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 遇见花开</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 鱼水情</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">遇见花开</h3>
-      <div class="bloginfo">
+      <h3 class="news_title" style="text-align:center;">鱼水情</h3>
+      <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">死神の眼泪</li>
+          <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_about" style="text-align:center;"><strong>原题：</strong>遇见花开遇见你，不知是否在心底</div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
         <br>
-        黑暗的楼廊
+		
+		<div class="news_about" style="text-align:center;">一。很久很久以前，鱼是生活在陆地上的猫，直到有一天，他遇见了水</div>
+		下雨天<br>
+		天空灰蒙蒙的脸<br>
+		我站在断桥上，西湖边<br>
+		用好奇的猫眼<br>
+		打量着雨点<br>
 		<br>
-		我独自凝望
+		直到你<br>
+		失足跌落我的眉间<br>
+		滑游在鼻梁上，猫眼边<br>
+		与我的睫毛缠绵<br>
+		又失落人间<br>
 		<br>
-		没有脚步的声响
+		这一瞬间<br>
+		动我心弦<br>
+		而你怎能毫不留怜<br>
+		就在那一年<br>
+		我还是只猫<br>
+
+		<div class="news_about" style="text-align:center;">二。这只猫苦苦的等了很久很久，再也不见那颗水滴回来，于是纵身一跃，跳入湖中</div>
+
+		我湿了脸庞<br>
+		碎了花样<br>
+		你带来了清凉<br>
+		也带来了无尽的忧伤<br>
+		为你我愿赴火蹈汤<br>
 		<br>
-		气氛是如此的安详
+		纵使疯狂<br>
+		纵使身亡<br>
+		也愿葬身你身旁<br>
+		就让你宽广的肩膀<br>
+		成为我灵魂的梦乡<br>
 		<br>
+		我就爱你这肆意汪洋<br>
+		请允许我翱翔<br>
+		在你心房<br>
+		建造起华美的宫殿和长廊<br>
+		而我，做你心的国王<br>
+		 
+		<div class="news_about" style="text-align:center;">三。这只猫在海里挣扎着，漂游着，渐渐地退化了四肢，长出了鳍<br>为此，遭到了猫族的唾弃和追杀</div> 
+		为了你<br>
+		我失去了猫的美丽<br>
+		却长出了短小的鳍<br>
+		变得丑陋无比<br>
+		猫族称我为愚<br>
 		<br>
-		一步步的寻迹
+		你掀起了风雨<br>
+		为我阻挡猫敌<br>
+		我倚着你的肩膀喘息<br>
+		把再战的力量积蓄<br>
+		为了爱，重整旗<br>
 		<br>
-		一点点的遗忘
+		当我终不能敌<br>
+		又该怎么逃离<br>
+		然而对你的爱，绝不放弃<br>
+		我躲藏海底<br>
+		用爱呼吸<br>
+
+		<div class="news_about" style="text-align:center;">四。他遭到了猫族的除名，自己改名为鱼，而猫鱼之仇也就此结下。<br>当他终于适应了水中的生活，当他以为终于可以安定下来了</div> 
+		 
+		你说<br>
+		你向往大海，将走向江河<br>
+		我愿给你一个承诺<br>
+		无论多坎坷<br>
+		这一路，你有我<br>
 		<br>
-		忘记了梦想
+		多么艰难苦涩<br>
+		我愿和你一起走过<br>
+		那些共同迎敌的时刻<br>
+		我一直都铭记着<br>
+		有了你就从不懦弱<br>
 		<br>
-		和你的模样
+		当一切遐想都化作泡沫<br>
+		在水平面开出浪花朵朵<br>
+		而你已在我身心每个角落<br>
+		我已依赖于你，你却离开了我<br>
+		剩下我一个，该怎么存活<br>
+		<div class="news_about" style="text-align:center;">五。然而，没等他们到达大海，河水渐渐蒸发</div> 
+		 
+		你的浪花<br>
+		拍打着海沙<br>
+		海沙上的誓言<br>
+		被风抹擦<br>
+		丝毫没有留下<br>
 		<br>
+		你离开吧<br>
+		空中才是你的天下<br>
+		任我在涸辙之中<br>
+		挣扎与牵挂<br>
+		而心已困乏<br>
 		<br>
-		拾级而上
-		<br>
-		踱步在这黑暗的楼廊
-		<br>
-		夜晚的颜色
-		<br>
-		也会如此的芬芳
-		<br>
-		<br>
-		转身，回望
-		<br>
-		遗忘的台阶上
-		<br>
-		尽是你笑的模样
-		<br>
-		<br>
-		路漫漫
-		<br>
-		怎可驻足眼前
-		<br>
-		回望的瞬间
-		<br>
-		是否心中万般的依恋
-		<br>
-		<br>
-		月虽明
-		<br>
-		却伤尽繁星点点
-		<br>
-		醉眼空前
-		<br>
-		安厝以待千年
-		<br>
-		<br>
-		轮回再转
-		<br>
-		下一世
-		<br>
-		梦的眼前 
-		<br>
-		<br>
+		当我再也不能合上我的双眼<br>
+		当我的每个泡沫都承载着思念<br>
+		当我挺尽最后一丝气力，以期能接近你一点点<br>
+		当眼泪化作时间，而你依旧远在天边<br>
+		该向谁诉说我的遗言<br>
+		水儿，来生再见<br>
+		<div class="news_about" style="text-align:center;">尾言：来生，我的枕上绣着鱼水情的花样，我的枕边卧着如水般柔情的你。<br><br>亲爱的，此生，不要再离开我了，好吗</div> 
+        <br>
 		<center>
-        <img alt="" src="images/poem/01.jpg"><br>
+        <img alt="" src="images/poem/42.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem41.html" title="秋殇">秋殇</a></p>
+      <p>下一篇：<a href="poem43.html" title="捉迷藏">捉迷藏</a></p>
       <p> </p>
       <p> </p>
     </div>
@@ -172,7 +211,7 @@
 		<a href="poem5.html">孤单成瘾</a>
 		<a href="poem42.html">鱼水情</a>
 		<a href="poem43.html">捉迷藏</a>
-      </ul>
+		</ul>
     </div>
     <div class="guanzhu" id="float">
       <h2 class="hometitle">关注我 么么哒！</h2>
