--- a/poem43.html
+++ b/poem43.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>遇见花开</title>
+<title>捉迷藏</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -66,93 +66,98 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 遇见花开</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 捉迷藏</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">遇见花开</h3>
-      <div class="bloginfo">
+      <h3 class="news_title" style="text-align:center;">捉迷藏</h3>
+      <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">死神の眼泪</li>
+          <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_about" style="text-align:center;"><strong>原题：</strong>遇见花开遇见你，不知是否在心底</div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-        <br>
-        黑暗的楼廊
+        
+		<div class="news_about" style="text-align:center;">一。灰膏墙，柳伴杨，青石板，泥土巷</div>
+		巷头渠水轻轻流
+		清澈如你明眸<br>
+		谁家的女儿不知羞<br>
+		一双玉足浣水流<br>
 		<br>
-		我独自凝望
+		莫问是谁家的姑娘<br>
+		扰了这鱼儿的安详<br>
+		为免去鱼儿的灾殃<br>
+		姑娘，可愿与我捉迷藏<br>
+
+		<div class="news_about" style="text-align:center;">二。捉迷藏，捉迷藏，麦田里，草垛旁</div>
+		踩到花儿你的眼凝伤<br>
+		纤细的手托住芬芳<br>
+		随着足迹寻你到路旁<br>
+		你与花同香<br>
 		<br>
-		没有脚步的声响
+		你匆忙躲藏<br>
+		留下飘散的芳香<br>
+		我叩问姑娘在不在<br>
+		你说着不在不在，却笑出了声响<br>
+
+		<div class="news_about" style="text-align:center;">三。酸里红，棒棒糖，小姑娘，别心伤</div>
+		明个儿还来这个地方<br>
+		一准叫你当大王<br>
+		你的开心快乐模样<br>
+		在浅浅酒窝中荡漾<br>
 		<br>
-		气氛是如此的安详
+		夕阳悠悠暖巷<br>
+		在黄昏红了脸庞<br>
+		草垛搭起的红纱帐<br>
+		姑娘你不要遗忘<br>
+
+		<div class="news_about" style="text-align:center;">四。泥土巷，黄月亮，南风起，尘飞扬</div> 
+		那里有什么风光<br>
+		让你走向了远方<br>
+		大大小小行囊<br>
+		也不怕累了肩膀<br>
 		<br>
+		噫语静静流淌<br>
+		在夜里湿了脸庞<br>
+		深夜不能眠<br>
+		花香飘到了梦乡<br>
+
+		<div class="news_about" style="text-align:center;">五。天涯上，有断肠，断桥上，人彷徨</div> 
+		夕阳白雪的掩映<br>
+		被风吹散的叮咛<br>
+		敢问桥边那棵望月枫<br>
+		可如我一般痴情<br>
 		<br>
-		一步步的寻迹
+		有情问山山也不明<br>
+		白杨有绿柳<br>
+		花影洒满径<br>
+		哪还有故人心<br>
+
+		<div class="news_about" style="text-align:center;">六。捉迷藏，去哪里，这一场，败给你</div> 
+		认输可不可以<br>
+		回来可不可以<br>
+		愿天降一场葬花雨<br>
+		葬掉那不经意的期许<br>
 		<br>
-		一点点的遗忘
-		<br>
-		忘记了梦想
-		<br>
-		和你的模样
-		<br>
-		<br>
-		拾级而上
-		<br>
-		踱步在这黑暗的楼廊
-		<br>
-		夜晚的颜色
-		<br>
-		也会如此的芬芳
-		<br>
-		<br>
-		转身，回望
-		<br>
-		遗忘的台阶上
-		<br>
-		尽是你笑的模样
-		<br>
-		<br>
-		路漫漫
-		<br>
-		怎可驻足眼前
-		<br>
-		回望的瞬间
-		<br>
-		是否心中万般的依恋
-		<br>
-		<br>
-		月虽明
-		<br>
-		却伤尽繁星点点
-		<br>
-		醉眼空前
-		<br>
-		安厝以待千年
-		<br>
-		<br>
-		轮回再转
-		<br>
-		下一世
-		<br>
-		梦的眼前 
-		<br>
+		无限相思思哪里<br>
+		做一帘幽梦<br>
+		听一席春雨<br>
+		独独少一个你<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/01.jpg"><br>
+        <img alt="" src="images/poem/43.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem42.html" title="鱼水情">鱼水情</a></p>
+      <p>下一篇：<a href="poem44.html" title="每一句都是谎言">每一句都是谎言</a></p>
       <p> </p>
       <p> </p>
     </div>
