--- a/poem44.html
+++ b/poem44.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>遇见花开</title>
+<title>每一句都是谎言</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -26,12 +26,7 @@
         <ul class="sub-nav">
           <li><a href="poem01.html">遇见花开</a></li>
           <li><a href="poem02.html">人生如梦</a></li>
-          <li><a href="poem31.html">埋葬柔情</a></li>
-          <li><a href="poem4.html">不诉离殇</a></li>
-          <li><a href="poem5.html">孤单成瘾</a></li>
-          <li><a href="poem61.html">一一〇七</a></li>
-          <li><a href="poem62.html">泪的告白</a></li>
-          <li><a href="poem63.html">在你身后</a></li>
+          <li><a href="poem51.html">还记得</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
@@ -66,93 +61,58 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 遇见花开</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 每一句都是谎言</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">遇见花开</h3>
-      <div class="bloginfo">
+      <h3 class="news_title" style="text-align:center;">每一句都是谎言</h3>
+      <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">死神の眼泪</li>
+          <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_about" style="text-align:center;"><strong>原题：</strong>遇见花开遇见你，不知是否在心底</div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-        <br>
-        黑暗的楼廊
+        <div class="news_about" style="text-align:center;">前言：说好的冬雷震震夏雨雪乃敢与君绝，已成了捕风捉影镜花水月。</div>
+		在夏天看雪<br>
+		在冬天听雷<br>
+		在雨里哭泣<br>
+		在梦里失眠<br>
 		<br>
-		我独自凝望
+		在家里流浪<br>
+		在红尘中徜徉<br>
+		向着人群呐喊<br>
+		我是国王<br>
 		<br>
-		没有脚步的声响
+		摘下镜中的花朵<br>
+		一瓣一瓣缭绕着心的方向<br>
+		捞起水中的月亮<br>
+		一点一滴消失了你的脸庞<br>
 		<br>
-		气氛是如此的安详
+		追捕遗失的芳香<br>
+		你的美吹到了远方<br>
+		捉住迷蒙的影像<br>
+		你的笑驱散了浅殇<br>
 		<br>
-		<br>
-		一步步的寻迹
-		<br>
-		一点点的遗忘
-		<br>
-		忘记了梦想
-		<br>
-		和你的模样
-		<br>
-		<br>
-		拾级而上
-		<br>
-		踱步在这黑暗的楼廊
-		<br>
-		夜晚的颜色
-		<br>
-		也会如此的芬芳
-		<br>
-		<br>
-		转身，回望
-		<br>
-		遗忘的台阶上
-		<br>
-		尽是你笑的模样
-		<br>
-		<br>
-		路漫漫
-		<br>
-		怎可驻足眼前
-		<br>
-		回望的瞬间
-		<br>
-		是否心中万般的依恋
-		<br>
-		<br>
-		月虽明
-		<br>
-		却伤尽繁星点点
-		<br>
-		醉眼空前
-		<br>
-		安厝以待千年
-		<br>
-		<br>
-		轮回再转
-		<br>
-		下一世
-		<br>
-		梦的眼前 
-		<br>
+		为你戴上古格斯戒指<br>
+		给你披上皇帝的新装<br>
+		还有很真诚的对你撒谎<br>
+		我不爱你，我只要去<br>
+		追求我的理想<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/01.jpg"><br>
+        <img alt="" src="images/poem/44.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem43.html" title="捉迷藏">捉迷藏</a></p>
+      <p>下一篇：<a href="poem45.html" title="寂夜">寂夜</a></p>
       <p> </p>
       <p> </p>
     </div>
