--- a/poem47.html
+++ b/poem47.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>遇见花开</title>
+<title>那时红颜</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -66,93 +66,68 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 遇见花开</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 那时红颜</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">遇见花开</h3>
-      <div class="bloginfo">
+      <h3 class="news_title" style="text-align:center;">那时红颜</h3>
+      <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">死神の眼泪</li>
+          <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_about" style="text-align:center;"><strong>原题：</strong>遇见花开遇见你，不知是否在心底</div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
         <br>
-        黑暗的楼廊
+		你眉目依旧<br>
+		却不再温柔<br>
+		爱装进沙漏<br>
+		时光悠悠<br>
+		感觉已远走<br>
 		<br>
-		我独自凝望
+		要怎么开口<br>
+		说什么挽留<br>
+		用一生守候<br>
+		百个春秋<br>
+		等一瞬回头<br>
 		<br>
-		没有脚步的声响
+		再不见回眸<br>
+		泪怎会停流<br>
+		待千年之后<br>
+		形容消瘦<br>
+		再忘却这愁<br>
 		<br>
-		气氛是如此的安详
+		爱怎能兜售<br>
+		换锦衣貂裘<br>
+		待功成名就<br>
+		花落他手<br>
+		添更多烦忧<br>
 		<br>
+		这不像是酒<br>
+		越久越醇厚<br>
+		誓言会苍皱<br>
+		心会枯朽<br>
+		时间不停留<br>
 		<br>
-		一步步的寻迹
-		<br>
-		一点点的遗忘
-		<br>
-		忘记了梦想
-		<br>
-		和你的模样
-		<br>
-		<br>
-		拾级而上
-		<br>
-		踱步在这黑暗的楼廊
-		<br>
-		夜晚的颜色
-		<br>
-		也会如此的芬芳
-		<br>
-		<br>
-		转身，回望
-		<br>
-		遗忘的台阶上
-		<br>
-		尽是你笑的模样
-		<br>
-		<br>
-		路漫漫
-		<br>
-		怎可驻足眼前
-		<br>
-		回望的瞬间
-		<br>
-		是否心中万般的依恋
-		<br>
-		<br>
-		月虽明
-		<br>
-		却伤尽繁星点点
-		<br>
-		醉眼空前
-		<br>
-		安厝以待千年
-		<br>
-		<br>
-		轮回再转
-		<br>
-		下一世
-		<br>
-		梦的眼前 
-		<br>
+		天设下符咒<br>
+		定互相伤透<br>
+		忘记吧相守<br>
+		十指相扣<br>
+		再没有以后<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/01.jpg"><br>
+        <img alt="" src="images/poem/47.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem46.html" title="归隐">归隐</a></p>
+      <p>下一篇：<a href="poem48.html" title="如同">如同</a></p>
       <p> </p>
       <p> </p>
     </div>
