--- a/poem49.html
+++ b/poem49.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>遇见花开</title>
+<title>太阳坠落</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -66,93 +66,62 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 遇见花开</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 太阳坠落</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">遇见花开</h3>
-      <div class="bloginfo">
+      <h3 class="news_title" style="text-align:center;">太阳坠落</h3>
+      <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">死神の眼泪</li>
+          <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_about" style="text-align:center;"><strong>原题：</strong>遇见花开遇见你，不知是否在心底</div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-        <br>
-        黑暗的楼廊
 		<br>
-		我独自凝望
+		如果太阳流星般坠落<br>
+		我的世界会变成什么<br>
+		黑夜与孤独包围着我<br>
+		还有数不完的星星和寂寞<br>
 		<br>
-		没有脚步的声响
+		夜里北极星在闪烁<br>
+		南方大地如此的辽阔<br>
+		自从你走了之后<br>
+		就再也没有回来过<br>
 		<br>
-		气氛是如此的安详
+		我到底做错了什么<br>
+		让你如此的冷漠<br>
+		还记得当年信誓旦旦<br>
+		我们许下的承诺<br>
 		<br>
+		爱不应该被挥霍<br>
+		可我一直都执着<br>
+		现在你又在哪呢<br>
+		又是否会想我<br>
 		<br>
-		一步步的寻迹
+		耀眼的流星从天边划过<br>
+		最真诚的愿望许下一个<br>
+		宁愿明天再见不到阳光的颜色<br>
+		也要让北极星指引着你找到我<br>
 		<br>
-		一点点的遗忘
-		<br>
-		忘记了梦想
-		<br>
-		和你的模样
-		<br>
-		<br>
-		拾级而上
-		<br>
-		踱步在这黑暗的楼廊
-		<br>
-		夜晚的颜色
-		<br>
-		也会如此的芬芳
-		<br>
-		<br>
-		转身，回望
-		<br>
-		遗忘的台阶上
-		<br>
-		尽是你笑的模样
-		<br>
-		<br>
-		路漫漫
-		<br>
-		怎可驻足眼前
-		<br>
-		回望的瞬间
-		<br>
-		是否心中万般的依恋
-		<br>
-		<br>
-		月虽明
-		<br>
-		却伤尽繁星点点
-		<br>
-		醉眼空前
-		<br>
-		安厝以待千年
-		<br>
-		<br>
-		轮回再转
-		<br>
-		下一世
-		<br>
-		梦的眼前 
-		<br>
+		当太阳流星般坠落<br>
+		我的世界会变成什么<br>
+		惟清风与我<br>
+		共赏着凄凉的月色<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/01.jpg"><br>
+        <img alt="" src="images/poem/49.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem48.html" title="如同">如同</a></p>
+      <p>下一篇：<a href="poem51.html" title="还记得">还记得</a></p>
       <p> </p>
       <p> </p>
     </div>
@@ -161,17 +130,7 @@
     <div class="cloud">
       <h2 class="hometitle">标签云</h2>
       <ul>
-        <a href="poem01.html">遇见花开</a>
-		<a href="poem02.html">人生如梦</a> 
-		<a href="poem51.html">还记得</a>
-        <a href="poem54.html">静夜思</a> 
-        <a href="poem31.html">埋葬柔情</a> 
-		<a href="poem61.html">一一〇七</a> 
-		<a href="poem44.html">每一句都是谎言</a> 
-		<a href="poem4.html">不诉离殇</a>
-		<a href="poem5.html">孤单成瘾</a>
-		<a href="poem42.html">鱼水情</a>
-		<a href="poem43.html">捉迷藏</a>
+        <a href="poem01.html">遇见花开</a> <a href="poem02.html">人生如梦</a> <a href="poem51.html">还记得</a>
       </ul>
     </div>
     <div class="guanzhu" id="float">
