--- a/poem51.html
+++ b/poem51.html
@@ -26,7 +26,12 @@
         <ul class="sub-nav">
           <li><a href="poem01.html">遇见花开</a></li>
           <li><a href="poem02.html">人生如梦</a></li>
-          <li><a href="poem51.html">还记得</a></li>
+          <li><a href="poem31.html">埋葬柔情</a></li>
+          <li><a href="poem4.html">不诉离殇</a></li>
+          <li><a href="poem5.html">孤单成瘾</a></li>
+          <li><a href="poem61.html">一一〇七</a></li>
+          <li><a href="poem62.html">泪的告白</a></li>
+          <li><a href="poem63.html">在你身后</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
@@ -95,8 +100,8 @@
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a href="poem01.html" title="遇见花开">遇见花开</a></p>
-      <p>下一篇：<a href="poem02.html" title="">无</a></p>
+      <p>上一篇：<a href="poem49.html" title="太阳坠落">太阳坠落</a></p>
+      <p>下一篇：<a href="poem52.html" title="能够遗忘，才不悲伤">能够遗忘，才不悲伤</a></p>
       <p> </p>
       <p> </p>
     </div>
@@ -105,7 +110,17 @@
     <div class="cloud">
       <h2 class="hometitle">标签云</h2>
       <ul>
-        <a href="poem01.html">遇见花开</a> <a href="poem02.html">人生如梦</a> <a href="poem51.html">还记得</a>
+        <a href="poem01.html">遇见花开</a>
+		<a href="poem02.html">人生如梦</a> 
+		<a href="poem51.html">还记得</a>
+        <a href="poem54.html">静夜思</a> 
+        <a href="poem31.html">埋葬柔情</a> 
+		<a href="poem61.html">一一〇七</a> 
+		<a href="poem44.html">每一句都是谎言</a> 
+		<a href="poem4.html">不诉离殇</a>
+		<a href="poem5.html">孤单成瘾</a>
+		<a href="poem42.html">鱼水情</a>
+		<a href="poem43.html">捉迷藏</a>
       </ul>
     </div>
     <div class="guanzhu" id="float">
@@ -122,7 +137,7 @@
   </div>
 </article>
 <footer>
-  <p>Design by <a href="https://gaodongxu.github.io/">高东旭</a></p>
+  <p>By <a href="https://gaodongxu.github.io/">高东旭</a></p>
 </footer>
 <a href="#" class="cd-top">Top</a>
 </body>
