--- a/poem61.html
+++ b/poem61.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>遇见花开</title>
+<title>一一〇七</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -66,93 +66,39 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 遇见花开</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 一一〇七</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">遇见花开</h3>
-      <div class="bloginfo">
+      <h3 class="news_title" style="text-align:center;">一一〇七</h3>
+      <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">死神の眼泪</li>
+          <li class="lmname">天涯海角</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_about" style="text-align:center;"><strong>原题：</strong>遇见花开遇见你，不知是否在心底</div>
-      <div class="news_con" style="text-align:center;">
+      <div class="news_con">
 		<!--content start-->
         <br>
-        黑暗的楼廊
-		<br>
-		我独自凝望
-		<br>
-		没有脚步的声响
-		<br>
-		气氛是如此的安详
-		<br>
-		<br>
-		一步步的寻迹
-		<br>
-		一点点的遗忘
-		<br>
-		忘记了梦想
-		<br>
-		和你的模样
-		<br>
-		<br>
-		拾级而上
-		<br>
-		踱步在这黑暗的楼廊
-		<br>
-		夜晚的颜色
-		<br>
-		也会如此的芬芳
-		<br>
-		<br>
-		转身，回望
-		<br>
-		遗忘的台阶上
-		<br>
-		尽是你笑的模样
-		<br>
-		<br>
-		路漫漫
-		<br>
-		怎可驻足眼前
-		<br>
-		回望的瞬间
-		<br>
-		是否心中万般的依恋
-		<br>
-		<br>
-		月虽明
-		<br>
-		却伤尽繁星点点
-		<br>
-		醉眼空前
-		<br>
-		安厝以待千年
-		<br>
-		<br>
-		轮回再转
-		<br>
-		下一世
-		<br>
-		梦的眼前 
-		<br>
-		<br>
+		宫中不胜那广寒，嫦娥姐姐来下凡。
+		<br><br>寂月无雨，未知雨佳（赵雨佳）。一章雨过（张雨），清新无沙（吴莎）。纤手擢雨荷（陈雨贺），舒眉观贾叶（贾叶）。簇从含蕾子（赵蕾），娇嫩不向秸（郭向杰）。杨子濛濛（子蒙），木茜芃芃（靳茜芃），晓风刻蓬（亢克鹏）。笋芽欲萌（马玉萌）。茁壮荪圃（孙璞），浩渺卓府（李卓府）。雨泽万物（刘宇泽），此乃天福（米天福）。故其言曰（曹琪岩）：“真佳雨也（支佳羽）。”
+		<br><br>夜空一晴（姬一晴），星河翰明（郭翰明）。皓月当空（陶皓月），添几分灵静（吴琳静）；佳萤取次（刘佳莹），争几点启明（张启明）。田野佳宁（田佳宁），绿眸子明（张子明）。蝶舞兴兴（韩兴兴），流光罩影（赵颖）。佳月照满盈（史佳悦），佳星不孤明（暴嘉鑫），处处佳宁（高佳宁）。
+		<br><br>伫立岸头，看百江争流（李江峥）；扁舟航航（张航航），听渔樵声扬（葛声扬）。激流澎湃（刘鹏），江翁成帅（郝成帅）。泛舟银川（白银川），望江思远（刘思远）。远水静红（郭静红），波影憧憧（王冲冲）。撑一支长篙，浪迹逍遥（肖遥）；观大好河山，吾正自豪（郑子豪）。不似李煜许多愁（李昱），会生涟漪心中留（王慧生）。无畏飏堑（杨倩），心予海蓝（王心雨）。请子铭记（乔紫铭），人间彰丽（张丽）。
+		<br><br>深暮红艳（申苜弘），丽染霞天（仇丽冉）。发冠冲旭（王冲旭），身着绮纤（剧启贤）。长笛寒嗥（韩豪），舞一曲霓裳；技宇超群（卢宇超），观烟火膨旺（高鹏旺）。英绝气势（武英珏），泱泱欢之（高欢芝）。人景相煽（相珊），天条欲歉（任玉倩）。时光慢飞（史曼菲），高朋满屋（周高鹏）。换装变服，为人师母。遇班长李博（李博），人才杜冲（杜冲）；更莘莘学子，卧虎藏龙。早起赏东旭（东旭），夜来梦英雄（周梦英）。不张浩浩之势（张浩），不过佳佳之日（邢佳佳）。教诉斌斌之礼（苏斌），渐结珍珍之谊（杨珍珍）。捍天地之伟灵（周玮玲），兴伟国之园丁（李兴伟）。广寒冷，人家宁（张家宁），该何去何从？
+		<br><br>天上、人间如何选（贺选）？但留一一零七班。
+        <br><br>
 		<center>
-        <img alt="" src="images/poem/01.jpg"><br>
+        <img alt="" src="images/poem/61.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem55.html" title="造化弄人">造化弄人</a></p>
+      <p>下一篇：<a href="poem62.html" title="泪的告白">泪的告白</a></p>
       <p> </p>
       <p> </p>
     </div>
@@ -178,6 +124,7 @@
       <h2 class="hometitle">关注我 么么哒！</h2>
       <ul>
         <li class="sina"><span>新浪微博</span>我的微博</a></li>
+        <!-- li class="tencent"><span>腾讯微博</span>杨青博客</a></li -->
         <li class="qq"><span>QQ号</span>1306494066</a></li>
         <li class="email"><span>邮箱帐号</span>1306494066@qq.com</a></li>
         <li class="wxgzh"><span>微信号</span>1306494066</a></li>
@@ -187,7 +134,7 @@
   </div>
 </article>
 <footer>
-  <p>By <a href="https://gaodongxu.github.io/">高东旭</a></p>
+  <p>Design by <a href="https://gaodongxu.github.io/">高东旭</a></p>
 </footer>
 <a href="#" class="cd-top">Top</a>
 </body>
