--- a/about.html
+++ b/about.html
@@ -26,7 +26,12 @@
         <ul class="sub-nav">
           <li><a href="poem01.html">遇见花开</a></li>
           <li><a href="poem02.html">人生如梦</a></li>
-          <li><a href="poem51.html">还记得</a></li>
+          <li><a href="poem31.html">埋葬柔情</a></li>
+          <li><a href="poem4.html">不诉离殇</a></li>
+          <li><a href="poem5.html">孤单成瘾</a></li>
+          <li><a href="poem61.html">一一〇七</a></li>
+          <li><a href="poem62.html">泪的告白</a></li>
+          <li><a href="poem63.html">在你身后</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
@@ -125,7 +130,7 @@
   </div>
 </div>
 <footer>
-  <p>Design by <a href="https://gaodongxu.github.io/">高东旭</a></p>
+  <p>By <a href="https://gaodongxu.github.io/">高东旭</a></p>
 </footer>
 <a href="#" class="cd-top">Top</a>
 </body>
