--- a/poem02.html
+++ b/poem02.html
@@ -26,7 +26,12 @@
         <ul class="sub-nav">
           <li><a href="poem01.html">遇见花开</a></li>
           <li><a href="poem02.html">人生如梦</a></li>
-          <li><a href="poem51.html">还记得</a></li>
+          <li><a href="poem31.html">埋葬柔情</a></li>
+          <li><a href="poem4.html">不诉离殇</a></li>
+          <li><a href="poem5.html">孤单成瘾</a></li>
+          <li><a href="poem61.html">一一〇七</a></li>
+          <li><a href="poem62.html">泪的告白</a></li>
+          <li><a href="poem63.html">在你身后</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
@@ -125,7 +130,7 @@
     </div>
     <div class="nextinfo">
       <p>上一篇：<a href="poem01.html" title="遇见花开">遇见花开</a></p>
-      <p>下一篇：<a href="poem51.html" title="">还记得</a></p>
+      <p>下一篇：<a href="poem31.html" title="埋葬柔情">埋葬柔情</a></p>
       <p> </p>
       <p> </p>
     </div>
@@ -134,14 +139,23 @@
     <div class="cloud">
       <h2 class="hometitle">标签云</h2>
       <ul>
-        <a href="poem01.html">遇见花开</a> <a href="poem02.html">人生如梦</a> <a href="poem51.html">还记得</a>
+        <a href="poem01.html">遇见花开</a>
+		<a href="poem02.html">人生如梦</a> 
+		<a href="poem51.html">还记得</a>
+        <a href="poem54.html">静夜思</a> 
+        <a href="poem31.html">埋葬柔情</a> 
+		<a href="poem61.html">一一〇七</a> 
+		<a href="poem44.html">每一句都是谎言</a> 
+		<a href="poem4.html">不诉离殇</a>
+		<a href="poem5.html">孤单成瘾</a>
+		<a href="poem42.html">鱼水情</a>
+		<a href="poem43.html">捉迷藏</a>
       </ul>
     </div>
     <div class="guanzhu" id="float">
       <h2 class="hometitle">关注我 么么哒！</h2>
       <ul>
         <li class="sina"><span>新浪微博</span>我的微博</a></li>
-        <!-- li class="tencent"><span>腾讯微博</span>杨青博客</a></li -->
         <li class="qq"><span>QQ号</span>1306494066</a></li>
         <li class="email"><span>邮箱帐号</span>1306494066@qq.com</a></li>
         <li class="wxgzh"><span>微信号</span>1306494066</a></li>
@@ -151,7 +165,7 @@
   </div>
 </article>
 <footer>
-  <p>Design by <a href="https://gaodongxu.github.io/">高东旭</a></p>
+  <p>By <a href="https://gaodongxu.github.io/">高东旭</a></p>
 </footer>
 <a href="#" class="cd-top">Top</a>
 </body>
