--- a/poem45.html
+++ b/poem45.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>遇见花开</title>
+<title>寂夜</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -26,12 +26,7 @@
         <ul class="sub-nav">
           <li><a href="poem01.html">遇见花开</a></li>
           <li><a href="poem02.html">人生如梦</a></li>
-          <li><a href="poem31.html">埋葬柔情</a></li>
-          <li><a href="poem4.html">不诉离殇</a></li>
-          <li><a href="poem5.html">孤单成瘾</a></li>
-          <li><a href="poem61.html">一一〇七</a></li>
-          <li><a href="poem62.html">泪的告白</a></li>
-          <li><a href="poem63.html">在你身后</a></li>
+          <li><a href="poem51.html">还记得</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
@@ -66,93 +61,48 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 遇见花开</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 寂夜</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">遇见花开</h3>
-      <div class="bloginfo">
+      <h3 class="news_title" style="text-align:center;">寂夜</h3>
+      <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">死神の眼泪</li>
+          <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_about" style="text-align:center;"><strong>原题：</strong>遇见花开遇见你，不知是否在心底</div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-        <br>
-        黑暗的楼廊
 		<br>
-		我独自凝望
+		别让夜晚再沉睡<br>
+		捡起它<br>
+		把你明亮的双眸暗窥<br>
 		<br>
-		没有脚步的声响
+		别让夜空再深邃<br>
+		描绘它<br>
+		把你发际的光晕点缀<br>
 		<br>
-		气氛是如此的安详
+		别让夜莺再劳累<br>
+		酬赏它<br>
+		让你脸颊的汗滴摇坠<br>
 		<br>
-		<br>
-		一步步的寻迹
-		<br>
-		一点点的遗忘
-		<br>
-		忘记了梦想
-		<br>
-		和你的模样
-		<br>
-		<br>
-		拾级而上
-		<br>
-		踱步在这黑暗的楼廊
-		<br>
-		夜晚的颜色
-		<br>
-		也会如此的芬芳
-		<br>
-		<br>
-		转身，回望
-		<br>
-		遗忘的台阶上
-		<br>
-		尽是你笑的模样
-		<br>
-		<br>
-		路漫漫
-		<br>
-		怎可驻足眼前
-		<br>
-		回望的瞬间
-		<br>
-		是否心中万般的依恋
-		<br>
-		<br>
-		月虽明
-		<br>
-		却伤尽繁星点点
-		<br>
-		醉眼空前
-		<br>
-		安厝以待千年
-		<br>
-		<br>
-		轮回再转
-		<br>
-		下一世
-		<br>
-		梦的眼前 
-		<br>
+		别让夜梦再难寐<br>
+		点燃它<br>
+		来我温柔与激情中沉醉<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/01.jpg"><br>
+        <img alt="" src="images/poem/45.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem44.html" title="每一句都是谎言">每一句都是谎言</a></p>
+      <p>下一篇：<a href="poem46.html" title="归隐">归隐</a></p>
       <p> </p>
       <p> </p>
     </div>
