--- a/poem48.html
+++ b/poem48.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>遇见花开</title>
+<title>如同</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -66,93 +66,44 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 遇见花开</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 如同</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">遇见花开</h3>
-      <div class="bloginfo">
+      <h3 class="news_title" style="text-align:center;">如同</h3>
+      <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">死神の眼泪</li>
+          <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_about" style="text-align:center;"><strong>原题：</strong>遇见花开遇见你，不知是否在心底</div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-        <br>
-        黑暗的楼廊
 		<br>
-		我独自凝望
+		遇见你如同遇见一场马拉松<br>
+		加速的心拥有了魔鬼的冲动<br>
 		<br>
-		没有脚步的声响
+		恋上你如同恋上一朵罂粟花<br>
+		让我在缭绕的花香中苦苦挣扎<br>
 		<br>
-		气氛是如此的安详
+		想念你如同想念一轮满月<br>
+		把忧伤化作满地明媚的雪<br>
 		<br>
-		<br>
-		一步步的寻迹
-		<br>
-		一点点的遗忘
-		<br>
-		忘记了梦想
-		<br>
-		和你的模样
-		<br>
-		<br>
-		拾级而上
-		<br>
-		踱步在这黑暗的楼廊
-		<br>
-		夜晚的颜色
-		<br>
-		也会如此的芬芳
-		<br>
-		<br>
-		转身，回望
-		<br>
-		遗忘的台阶上
-		<br>
-		尽是你笑的模样
-		<br>
-		<br>
-		路漫漫
-		<br>
-		怎可驻足眼前
-		<br>
-		回望的瞬间
-		<br>
-		是否心中万般的依恋
-		<br>
-		<br>
-		月虽明
-		<br>
-		却伤尽繁星点点
-		<br>
-		醉眼空前
-		<br>
-		安厝以待千年
-		<br>
-		<br>
-		轮回再转
-		<br>
-		下一世
-		<br>
-		梦的眼前 
-		<br>
+		忘记你如同忘记一场秋雨<br>
+		颓圮的大地上不着落一丝痕迹<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/01.jpg"><br>
+        <img alt="" src="images/poem/48.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem47.html" title="那时红颜">那时红颜</a></p>
+      <p>下一篇：<a href="poem49.html" title="太阳坠落">太阳坠落</a></p>
       <p> </p>
       <p> </p>
     </div>
