--- a/poem54.html
+++ b/poem54.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>遇见花开</title>
+<title>静夜思</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -66,93 +66,72 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 遇见花开</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 静夜思</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">遇见花开</h3>
-      <div class="bloginfo">
+      <h3 class="news_title" style="text-align:center;">静夜思</h3>
+      <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">死神の眼泪</li>
+          <li class="lmname">孤单成瘾</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_about" style="text-align:center;"><strong>原题：</strong>遇见花开遇见你，不知是否在心底</div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-        <br>
-        黑暗的楼廊
 		<br>
-		我独自凝望
+		你说给我听的情话<br>
+		给了我一个天下<br>
+		你走了 这天下坍塌<br>
+		海角淹没了天涯<br>
 		<br>
-		没有脚步的声响
+		别离的你不会牵挂<br>
+		我也会故作潇洒<br>
+		雪花飘到了那一年春夏<br>
+		妄想把你在记忆中抹擦<br>
 		<br>
-		气氛是如此的安详
+		想念你<br>
+		在每一个夜深人静的夜里<br>
+		你的每一寸呼吸<br>
+		我都难以逃离<br>
 		<br>
+		约定嫁我要穿的红袭衣<br>
+		誓言在黑暗中沉寂<br>
+		衣不再红 天不再碧<br>
+		我用什么来自欺<br>
 		<br>
-		一步步的寻迹
+		你在南方盛开了花蕊<br>
+		思念把北国的雪融成泪<br>
+		我的心是泼到哈尔滨的水<br>
+		冰冷禁锢了一切一切的美<br>
 		<br>
-		一点点的遗忘
+		你在他的世界里耀武扬威<br>
+		我在我的世界里万念俱灰<br>
+		只有黑暗在黑夜里沉睡<br>
+		而让我在记忆中沉醉<br>
 		<br>
-		忘记了梦想
+		抽泣在枕边静静的淌<br>
+		挤出的泪流经面庞<br>
+		一抹无味的苍凉<br>
+		迷失了不堪的过往<br>
 		<br>
-		和你的模样
-		<br>
-		<br>
-		拾级而上
-		<br>
-		踱步在这黑暗的楼廊
-		<br>
-		夜晚的颜色
-		<br>
-		也会如此的芬芳
-		<br>
-		<br>
-		转身，回望
-		<br>
-		遗忘的台阶上
-		<br>
-		尽是你笑的模样
-		<br>
-		<br>
-		路漫漫
-		<br>
-		怎可驻足眼前
-		<br>
-		回望的瞬间
-		<br>
-		是否心中万般的依恋
-		<br>
-		<br>
-		月虽明
-		<br>
-		却伤尽繁星点点
-		<br>
-		醉眼空前
-		<br>
-		安厝以待千年
-		<br>
-		<br>
-		轮回再转
-		<br>
-		下一世
-		<br>
-		梦的眼前 
-		<br>
+		我在你身后的地方<br>
+		驻足凝望 转身悲伤<br>
+		默默地看你开心难过模样<br>
+		没有安慰 没有念想<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/01.jpg"><br>
+        <img alt="" src="images/poem/54.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem53.html" title="情圣">情圣</a></p>
+      <p>下一篇：<a href="poem55.html" title="造化弄人">造化弄人</a></p>
       <p> </p>
       <p> </p>
     </div>
