--- a/poem62.html
+++ b/poem62.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>遇见花开</title>
+<title>泪的告白</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -66,93 +66,92 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 遇见花开</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 泪的告白</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">遇见花开</h3>
-      <div class="bloginfo">
+      <h3 class="news_title" style="text-align:center;">泪的告白</h3>
+      <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">死神の眼泪</li>
+          <li class="lmname">天涯海角</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_about" style="text-align:center;"><strong>原题：</strong>遇见花开遇见你，不知是否在心底</div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-        <br>
-        黑暗的楼廊
+		<div class="news_about" style="text-align:center;">曲：KOKIA-ありがとう<br>
+		词：KOKIA&文青<br>
+		第一行是日文歌词<br>
+		第二行是中文歌词<br></div>
 		<br>
-		我独自凝望
-		<br>
-		没有脚步的声响
-		<br>
-		气氛是如此的安详
-		<br>
-		<br>
-		一步步的寻迹
-		<br>
-		一点点的遗忘
-		<br>
-		忘记了梦想
-		<br>
-		和你的模样
+		<audio src="musics/泪的告白.mp3" controls="controls">
+		Your browser does not support the audio element.
+		</audio>
 		<br>
 		<br>
-		拾级而上
+		大来母奴呐 kis可奴气ni <br>
+		我曾看~ 过 夏季 下~雪<br>
 		<br>
-		踱步在这黑暗的楼廊
+		那你卡屋U 西那~带一路<br>
+		我曾听过   冬天 打~雷<br>
 		<br>
-		夜晚的颜色
+		户UK素开玛 阿那塔哇~一那你 <br>
+		你不知道我  在梦里也~会失眠<br>
 		<br>
-		也会如此的芬芳
+		噢某一得大开某~no~to够~西代<br>
+		你看不见我  在 雨~里 哭~泣~<br>
 		<br>
+		塞我西 一头开no那卡够 土吧喔~西那啊他  <br>
+		在夜里 月亮  还在那里   看他的~人只剩我<br>
 		<br>
-		转身，回望
+		你no头鸥大气no 有哦~你  <br>
+		我 多 希望我身边  有~ 你<br>
 		<br>
-		遗忘的台阶上
+		哇去噶多你牙素来大 奴来耐扣no有哦~你  <br>
+		回头看我走过的地方 每个地方都  有~ 你<br>
 		<br>
-		尽是你笑的模样
+		扣爱你 塔那一撒卡比噶 ki扣爱代~扣路  <br>
+		我把你 用时间裹着埋葬 忘了才不~悲伤<br>
 		<br>
+		某西某 某一气都 啊那大你 啊~一路那拉  <br>
+		我曾说 冬雷震震 夏  雨雪 乃~与君  绝<br>
 		<br>
-		路漫漫
+		他a他 黑淘扣都 次他爱他~一  <br>
+		都变成 镜花水月 但我还爱~你<br>
 		<br>
-		怎可驻足眼前
+		啊里噶都 啊里噶都~ <br>
+		我还爱你 我愿等你<br>
 		<br>
-		回望的瞬间
+		头ki你哇 开字次开爱啊代某 啊那他噢噶 恁几~~代一大里~~  <br>
+		为你戴上  古格斯的消失戒指 啊为你披上 皇帝~~的新~~装~~<br>
 		<br>
-		是否心中万般的依恋
+		屋某一代哇 西么太某no 那歌撒没 <br>
+		把温柔埋葬 还很真诚的 对你撒谎<br>
 		<br>
+		一次妈代某啊那他哇 扣扣你一路  <br>
+		我不爱你了你去追求 你的理想吧<br>
 		<br>
-		月虽明
+		某西某 某一气都 啊那大你 啊~一路那拉  <br>
+		我曾说 冬雷震震 夏  雨雪 乃~与君~ 绝<br>
 		<br>
-		却伤尽繁星点点
+		他啊他 黑淘扣都 次他爱他~一  <br>
+		都变成镜花水月 我还是爱~你<br>
 		<br>
-		醉眼空前
-		<br>
-		安厝以待千年
-		<br>
-		<br>
-		轮回再转
-		<br>
-		下一世
-		<br>
-		梦的眼前 
-		<br>
+		啊里噶都 啊里噶都~<br>
+		还是爱你 还愿等你<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/01.jpg"><br>
+        <img alt="" src="images/poem/54.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem61.html" title="一一〇七">一一〇七</a></p>
+      <p>下一篇：<a href="poem63.html" title="我一直在你身后">我一直在你身后</a></p>
       <p> </p>
       <p> </p>
     </div>
