--- a/poem63.html
+++ b/poem63.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>遇见花开</title>
+<title>我一直在你身后</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -66,93 +66,62 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 遇见花开</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 我一直在你身后</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">遇见花开</h3>
-      <div class="bloginfo">
+      <h3 class="news_title" style="text-align:center;">我一直在你身后</h3>
+      <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">死神の眼泪</li>
+          <li class="lmname">天涯海角</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_about" style="text-align:center;"><strong>原题：</strong>遇见花开遇见你，不知是否在心底</div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-        <br>
-        黑暗的楼廊
+		<div class="news_about" style="text-align:center;">词：文青 曲：暂无</div>
+		街角的路灯把我的影子轻轻摇晃<br>
+		学校对面的奶茶店悠悠的飘着奶香<br>
+		老旧的屋檐上滴下的雨叮咚作响<br>
+		深巷里的梧桐树打碎了斑驳太阳<br>
 		<br>
-		我独自凝望
+		踱步在这黑暗的楼廊<br>
+		夜晚的颜色也会芬芳<br>
+		一步步离开 一点点遗忘<br>
+		忘记了梦想 和你的模样<br>
 		<br>
-		没有脚步的声响
+		我就在你身后的地方<br>
+		驻足凝望 转身悲伤<br>
+		默默地看你开心难过模样<br>
+		没有安慰 没有念想<br>
 		<br>
-		气氛是如此的安详
+		后湖里的荷叶无人拜访绿了又黄<br>
+		那些文字在书箱的最深处被我埋藏<br>
+		那年偷偷写了下你名字的语文书<br>
+		依旧静静诉说着那段泛黄的时光<br>
 		<br>
+		抽泣在枕边静静的淌<br>
+		挤出的眼泪流经面庞<br>
+		一抹无味的 悲伤和苍凉<br>
+		就要迷失了 不堪的过往<br>
 		<br>
-		一步步的寻迹
-		<br>
-		一点点的遗忘
-		<br>
-		忘记了梦想
-		<br>
-		和你的模样
-		<br>
-		<br>
-		拾级而上
-		<br>
-		踱步在这黑暗的楼廊
-		<br>
-		夜晚的颜色
-		<br>
-		也会如此的芬芳
-		<br>
-		<br>
-		转身，回望
-		<br>
-		遗忘的台阶上
-		<br>
-		尽是你笑的模样
-		<br>
-		<br>
-		路漫漫
-		<br>
-		怎可驻足眼前
-		<br>
-		回望的瞬间
-		<br>
-		是否心中万般的依恋
-		<br>
-		<br>
-		月虽明
-		<br>
-		却伤尽繁星点点
-		<br>
-		醉眼空前
-		<br>
-		安厝以待千年
-		<br>
-		<br>
-		轮回再转
-		<br>
-		下一世
-		<br>
-		梦的眼前 
-		<br>
+		我就在你身后的地方<br>
+		驻足凝望 转身悲伤<br>
+		默默地看你开心难过模样<br>
+		没有安慰 没有念想<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/01.jpg"><br>
+        <img alt="" src="images/poem/55.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem62.html" title="泪的告白">泪的告白</a></p>
+      <p>下一篇：<a >无</a></p>
       <p> </p>
       <p> </p>
     </div>
