--- a/about.html
+++ b/about.html
@@ -82,9 +82,9 @@
 		<br />
         在北京<strong>凤凰网</strong>实习半年，端茶送水打打杂，顺便负责视频标题关键词提取服务的设计实现和优化；采用 JSP+Tomcat 搭建了各类文本处理算法的展示平台；上线爬取新闻地域识别服务；搭建了各类训练数据与 Kafka 数据库对接的 http 服务；负责词语重要度的计算；定时处理文章质量评分和广告识别日志的服务并把结果写进 Redis 中；定时从百度搜索风云榜爬取热搜词的任务；从 www.poi86.com 上抓取 POI 信息并进行筛选和清洗。<br />
         <br />
-        其他的，英语六级飘过，office如果允许边搜边用，那我就是精通水平。<br />
+        其他的，英语六级飘过，office有啥不会的就搜呗。<br />
         <br />
-		github主页：<a href="https://gaodongxu.github.io/">https://gaodongxu.github.io/</a><br />
+		github主页：https://gaodongxu.github.io/（就是此网站）<br />
 		 CSDN 博客：<a href="https://blog.csdn.net/qq_29591261">https://blog.csdn.net/qq_29591261</a><br />
 		微信公众号：没BUG（扫一扫，关注我￣ω￣= ）<br />
 		微信小程序：没BUG（扫一扫，关注我￣ω￣= ）<br />
@@ -94,7 +94,7 @@
         </p>
       <h2>基本信息</h2>
 	  <br />
-	  河北省石家庄市井陉县人。高中语文必修三《过秦论》插图中有井陉，千年古县，拉花之乡。<br />
+	  河北省石家庄市井陉县人。井陉那些事：太行东麓，河北西陲。汉将韩信，背水一战。百团大战，一往无前。千年古县，拉花之乡。（不要提到韩信就想起来王者荣耀的一个刺客(～￣▽￣)～要知道他最著名的就是在井陉的背水一战）<br />
 	  <br /><center>
 	  <img src="images/jingxing.jpg"></center>
 	  <br />
@@ -109,7 +109,6 @@
 	  半个强迫病患&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	  强制对齐 强制对齐 强制对齐 强制对齐<br />
 	  <br />
-	  有人可能会问，以上加起来一共是两个人。对，以前我有多重人格，后来我们和好了。<br />
 	  </p>
       <p></p>
     </ul>
